--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,30 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Scroll bar */
+body::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #d8b4fe;
+  outline: 1px solid #d8b4fe;
+}
+
+div::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+div::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
+}
+
+div::-webkit-scrollbar-thumb {
+  background-color: #d8b4fe;
+  outline: 1px solid #d8b4fe;
+}
